--- a/package.json
+++ b/package.json
@@ -11,10 +11,21 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "electron-is-dev": "^2.0.0",
+    "faker": "^5.5.3",
+    "i18next": "^20.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
+    "react-virtualized": "^9.22.3",
+    "recharts": "^2.1.2",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.3.4",
