update: added login modal base and jsconfig

--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "homepage": "./",
   "main": "./public/electron.js",
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@cosmjs/crypto": "^0.26.0",
+    "@cosmjs/launchpad": "^0.26.0",
+    "@cosmjs/proto-signing": "^0.26.0",
+    "@cosmjs/stargate": "^0.26.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.1",
+    "@mui/styled-engine-sc": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "electron-is-dev": "^2.0.0",
-    "faker": "^5.5.3",
     "i18next": "^20.6.1",
+    "ipfs-http-client": "^53.0.1",
+    "notistack": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
