--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "homepage": "./",
   "main": "./public/electron.js",
   "dependencies": {
-    "@cosmjs/crypto": "^0.26.0",
-    "@cosmjs/launchpad": "^0.26.0",
-    "@cosmjs/proto-signing": "^0.26.0",
-    "@cosmjs/stargate": "^0.26.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@firmachain/firma-js": "^0.2.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@mui/styled-engine-sc": "^5.0.0",
@@ -19,9 +16,9 @@
     "@testing-library/user-event": "^12.1.10",
     "electron-is-dev": "^2.0.0",
     "i18next": "^20.6.1",
-    "ipfs-http-client": "^53.0.1",
     "notistack": "^2.0.2",
     "react": "^17.0.2",
+    "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
     "react-redux": "^7.2.5",
