--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,7 @@
 {
-    "compilerOptions": {
-        "baseUrl": "src"
-    },
-    "includes": [
-        "src"
-    ]
+  "compilerOptions": {
+    "baseUrl": "src"
+  },
+  "includes": ["src"],
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
