--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^15.6.0",
     "i18next": "^20.6.1",
     "notistack": "^2.0.2",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
