--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
     "react-virtualized": "^9.22.3",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.7",
     "recharts": "^2.1.2",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
