--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
+    "react-spinners": "^0.11.0",
     "react-swipeable-views": "^0.14.0",
     "react-virtualized": "^9.22.3",
     "react-virtualized-auto-sizer": "^1.0.6",
