--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.2.0",
+    "@firmachain/firma-js": "^0.2.3",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@mui/styled-engine-sc": "^5.0.0",
@@ -44,6 +44,7 @@
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.3.4",
+    "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
