--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.2.3",
+    "@firmachain/firma-js": "^0.2.5",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@mui/styled-engine-sc": "^5.0.0",
@@ -20,6 +20,7 @@
     "electron-is-dev": "^2.0.0",
     "graphql": "^15.6.0",
     "i18next": "^20.6.1",
+    "moment": "^2.29.1",
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
