--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/crypto-js": "^4.0.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/numeral": "^2.0.2",
@@ -27,11 +28,13 @@
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.15",
     "apollo-boost": "^0.4.9",
+    "crypto-js": "^4.1.1",
     "graphql": "^15.7.1",
     "moment": "^2.29.1",
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
+    "react-app-env": "^1.2.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
@@ -51,7 +54,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm run react:start\" \"npm run electron:start\"",
-    "react:start": "react-scripts start",
+    "react:start": "react-app-env --env-file=.env start",
     "react:build": "react-scripts build",
     "electron:start": "wait-on http://localhost:3000 && electron ."
   },
