--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/numeral": "^2.0.2",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
@@ -33,6 +34,7 @@
     "moment": "^2.29.1",
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-app-env": "^1.2.3",
     "react-dom": "^17.0.2",
