--- a/package.json
+++ b/package.json
@@ -58,7 +58,12 @@
     "start": "concurrently \"npm run react:start\" \"npm run electron:start\"",
     "react:start": "react-app-env --env-file=.env start",
     "react:build": "react-scripts build",
-    "electron:start": "wait-on http://localhost:3000 && electron ."
+    "electron:start": "wait-on http://localhost:3000 && electron .",
+    "build": "electron-builder build",
+    "build:osx": "electron-builder --mac",
+    "build:win32": "electron-builder --win --ia32",
+    "build:win64": "electron-builder --win --x64",
+    "build:win": "npm run build:win32 && npm run build:win64"
   },
   "eslintConfig": {
     "extends": [
@@ -86,14 +91,38 @@
     "wait-on": "^6.0.0"
   },
   "build": {
-    "appId": "com.firmachain.wallet",
-    "files": [
-      "public/**/*",
-      "build/**/*",
-      "node_modules/**/*"
-    ],
-    "directories": {
-      "buildResources": "assets"
+    "productName": "firma-station",
+    "appId": "com.firmachain.station",
+    "asar": false,
+    "protocols": {
+      "name": "firma-station",
+      "schemes": [
+        "firma-station"
+      ]
+    },
+    "mac": {
+      "target": [
+        "default"
+      ]
+    },
+    "dmg": {
+      "title": "firma-station"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true
     }
   }
 }
