feat: my delegate list

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.2.12",
+    "@firmachain/firma-js": "^0.2.13",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "@nivo/core": "^0.74.0",
+    "@nivo/pie": "^0.74.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
