feat: support ledger devices

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.2.15",
+    "@firmachain/firma-js": "^0.2.18",
+    "@firmachain/firma-js-ledger": "^0.0.2",
+    "@ledgerhq/hw-transport-webhid": "^6.20.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "@nivo/core": "^0.74.0",
