feat: download paper wallet

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.0.6",
     "@nivo/core": "^0.74.0",
     "@nivo/pie": "^0.74.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -23,6 +24,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/numeral": "^2.0.2",
+    "@types/qrcode": "^1.4.2",
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -38,6 +40,8 @@
     "moment": "^2.29.1",
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.0",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-app-env": "^1.2.3",
