--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
@@ -45,9 +46,11 @@
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-app-env": "^1.2.3",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-idle-timer": "^4.6.4",
     "react-redux": "^7.2.6",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
