--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.5",
   "private": true,
   "homepage": "./",
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@apollo/react-hooks": "^4.0.0",
