--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/numeral": "^2.0.2",
-    "@types/qrcode": "^1.4.2",
-    "@types/qrcode.react": "^1.0.2",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
@@ -47,13 +46,13 @@
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
     "pdf-lib": "^1.17.1",
-    "qrcode": "^1.5.0",
-    "qrcode.react": "^1.0.1",
+    "qrcode": "^1.5.1",
     "react": "^17.0.2",
     "react-app-env": "^1.2.3",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-idle-timer": "^4.6.4",
+    "react-qrcode-logo": "^2.8.0",
     "react-redux": "^7.2.6",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.3.0",
