--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "1.0.6",
   "private": true,
   "homepage": "./",
-  "resolutions": {
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2"
-  },
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@apollo/react-hooks": "^4.0.0",
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.2.48",
+    "@firmachain/firma-js": "^0.2.62",
     "@firmachain/firma-js-ledger": "^0.0.8",
-    "@ledgerhq/hw-transport-webhid": "6.20.0",
+    "@ledgerhq/hw-transport-webhid": "^6.29.4",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
-    "@nivo/core": "^0.74.0",
-    "@nivo/pie": "^0.74.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/pie": "^0.87.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -29,8 +26,8 @@
     "@types/node": "^12.0.0",
     "@types/numeral": "^2.0.2",
     "@types/qrcode": "^1.5.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "18.2.19",
+    "@types/react-dom": "18.2.7",
     "@types/react-redux": "^7.1.20",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.3.2",
@@ -39,6 +36,8 @@
     "@types/styled-components": "^5.1.15",
     "apollo-boost": "^0.4.9",
     "axios": "^1.6.5",
+    "browserify-fs": "^1.0.0",
+    "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.1.1",
     "graphql": "^15.7.1",
     "hamburger-react": "^2.4.1",
@@ -46,33 +45,36 @@
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
     "pdf-lib": "^1.17.1",
+    "process": "^0.11.10",
     "qrcode": "^1.5.1",
-    "react": "^17.0.2",
+    "react": "18.2.0",
     "react-app-env": "^1.2.3",
     "react-device-detect": "^2.2.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "18.2.0",
     "react-idle-timer": "^4.6.4",
     "react-qrcode-logo": "^2.8.0",
     "react-redux": "^7.2.6",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-select": "^5.1.0",
-    "react-spinners": "^0.11.0",
+    "react-spinners": "^0.14.1",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6",
     "recharts": "^2.1.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.95.0"
   },
   "scripts": {
-    "start": "react-app-env --env-file=.env start",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "start": "craco start",
+    "build": "GENERATE_SOURCEMAP=false craco build",
     "deploy-testnet": "aws s3 sync ./build s3://deploy-firmastation/testnet --profile=firmachain-deploy --delete",
     "invalidate-testnet": "aws cloudfront create-invalidation --profile=firmachain-deploy --distribution-id E3490CTTE7409I --paths '/*'",
     "deploy-mainnet": "aws s3 sync ./build s3://deploy-firmastation/mainnet --profile=firmachain-deploy --delete",
@@ -97,8 +99,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "ajv": "^8.17.1",
     "concurrently": "^6.2.1",
-    "cross-env": "^7.0.3",
+    "env-cmd": "^10.1.0",
+    "path-browserify": "^1.0.1",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2",
     "wait-on": "^6.0.0"
   }
 }
