--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firma-station",
-  "version": "1.0.6",
+  "version": "1.1.1",
   "private": true,
   "homepage": "./",
   "dependencies": {
@@ -9,7 +9,7 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.2.62",
+    "@firmachain/firma-js": "^0.3.0-beta1",
     "@firmachain/firma-js-ledger": "^0.0.8",
     "@ledgerhq/hw-transport-webhid": "^6.29.4",
     "@mui/icons-material": "^5.0.5",
