chore: switch to yarn + vite
- Switch to yarn + vite
- Update axios to latest
- Remove unused modules/types

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "bracketSpacing": true,
   "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "es5",
+  "trailingComma": false,
   "tabWidth": 2,
   "useTabs": false
 }
