--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "firma-station",
   "version": "1.1.1",
   "private": true,
+  "type": "module",
   "homepage": "./",
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@apollo/react-hooks": "^4.0.0",
-    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@firmachain/firma-js": "^0.3.0-beta1",
@@ -18,12 +18,40 @@
     "@nivo/pie": "^0.87.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "apollo-boost": "^0.4.9",
+    "axios": "^1.10.0",
+    "crypto-js": "^4.1.1",
+    "graphql": "^15.7.1",
+    "hamburger-react": "^2.4.1",
+    "moment": "^2.29.1",
+    "notistack": "^2.0.2",
+    "numeral": "^2.0.6",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.1",
+    "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "18.2.0",
+    "react-idle-timer": "^4.6.4",
+    "react-qrcode-logo": "^2.8.0",
+    "react-redux": "^7.2.6",
+    "react-responsive": "^8.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-select": "^5.1.0",
+    "react-spinners": "^0.14.1",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
+    "recharts": "^2.1.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.0",
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7",
+    "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/crypto-js": "^4.0.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
+    "@types/node": "^20.19.2",
     "@types/numeral": "^2.0.2",
     "@types/qrcode": "^1.5.0",
     "@types/react": "18.2.19",
@@ -34,57 +62,22 @@
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.15",
-    "apollo-boost": "^0.4.9",
-    "axios": "^1.6.5",
-    "browserify-fs": "^1.0.0",
-    "crypto-browserify": "^3.12.1",
-    "crypto-js": "^4.1.1",
-    "graphql": "^15.7.1",
-    "hamburger-react": "^2.4.1",
-    "moment": "^2.29.1",
-    "notistack": "^2.0.2",
-    "numeral": "^2.0.6",
-    "pdf-lib": "^1.17.1",
-    "process": "^0.11.10",
-    "qrcode": "^1.5.1",
-    "react": "18.2.0",
-    "react-app-env": "^1.2.3",
-    "react-device-detect": "^2.2.2",
-    "react-dom": "18.2.0",
-    "react-idle-timer": "^4.6.4",
-    "react-qrcode-logo": "^2.8.0",
-    "react-redux": "^7.2.6",
-    "react-responsive": "^8.2.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.1.0",
-    "react-spinners": "^0.14.1",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.6",
-    "recharts": "^2.1.6",
-    "redux": "^4.1.2",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.0",
-    "stream-browserify": "^3.0.0",
-    "styled-components": "^5.3.3",
-    "styled-normalize": "^8.0.7",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.95.0"
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "ajv": "^8.17.1",
+    "prettier": "^3.3.3",
+    "typescript": "^4.9.5",
+    "vite": "^6.3.5",
+    "vite-plugin-bundle-obfuscator": "^1.7.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "GENERATE_SOURCEMAP=false craco build",
+    "dev": "vite dev",
+    "build": "GENERATE_SOURCEMAP=false vite build",
     "deploy-testnet": "aws s3 sync ./build s3://deploy-firmastation/testnet --profile=firmachain-deploy --delete",
     "invalidate-testnet": "aws cloudfront create-invalidation --profile=firmachain-deploy --distribution-id E3490CTTE7409I --paths '/*'",
     "deploy-mainnet": "aws s3 sync ./build s3://deploy-firmastation/mainnet --profile=firmachain-deploy --delete",
     "invalidate-mainnet": "aws cloudfront create-invalidation --profile=firmachain-deploy --distribution-id E2R5SO7C9I4TON --paths '/*'"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -98,14 +91,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "ajv": "^8.17.1",
-    "concurrently": "^6.2.1",
-    "env-cmd": "^10.1.0",
-    "path-browserify": "^1.0.1",
-    "util": "^0.12.5",
-    "vm-browserify": "^1.1.2",
-    "wait-on": "^6.0.0"
-  }
+  "packageManager": "yarn@4.9.2"
 }
