--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "bracketSpacing": true,
   "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": false,
+  "trailingComma": "none",
   "tabWidth": 2,
   "useTabs": false
 }
