--- a/package.json
+++ b/package.json
@@ -64,12 +64,49 @@
     "@types/styled-components": "^5.1.15",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "ajv": "^8.17.1",
+    "apollo-boost": "^0.4.9",
+    "axios": "^1.6.5",
+    "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "^4.1.1",
+    "graphql": "^15.7.1",
+    "hamburger-react": "^2.4.1",
+    "moment": "^2.29.1",
+    "notistack": "^2.0.2",
+    "numeral": "^2.0.6",
+    "pdf-lib": "^1.17.1",
     "prettier": "^3.3.3",
+    "process": "^0.11.10",
+    "qrcode": "^1.5.1",
+    "react": "18.2.0",
+    "react-app-env": "^1.2.3",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "18.2.0",
+    "react-idle-timer": "^4.6.4",
+    "react-qrcode-logo": "^2.8.0",
+    "react-redux": "^7.2.6",
+    "react-responsive": "^8.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.1.0",
+    "react-spinners": "^0.14.1",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
+    "recharts": "^2.1.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.0",
+    "stream-browserify": "^3.0.0",
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.9.5",
     "vite": "^6.3.5",
     "vite-plugin-bundle-obfuscator": "^1.7.0",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.95.0"
   },
   "scripts": {
     "dev": "vite dev",
