--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.3.0-beta1",
+    "@firmachain/firma-js": "^0.3.1",
     "@firmachain/firma-js-ledger": "^0.0.8",
     "@ledgerhq/hw-transport-webhid": "^6.29.4",
     "@mui/icons-material": "^5.0.5",
