chore: update repo config
- Remove duplicated modules / un-used modules
- Recommend re-install dependency
- Add preview setting in vite.config. try `PORT=3010 yarn run start`
- Remove yarn install-state

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "homepage": "./",
   "dependencies": {
     "@apollo/client": "^3.4.16",
-    "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@firmachain/firma-js": "^0.3.1",
@@ -18,7 +17,6 @@
     "@nivo/pie": "^0.87.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "@reduxjs/toolkit": "^1.6.2",
-    "apollo-boost": "^0.4.9",
     "axios": "^1.10.0",
     "crypto-js": "^4.1.1",
     "graphql": "^15.7.1",
@@ -26,11 +24,10 @@
     "moment": "^2.29.1",
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
-    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-idle-timer": "^4.6.4",
     "react-qrcode-logo": "^2.8.0",
     "react-redux": "^7.2.6",
@@ -43,75 +40,36 @@
     "recharts": "^2.1.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.3",
-    "styled-normalize": "^8.0.7",
-    "web-vitals": "^1.0.1"
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/crypto-js": "^4.0.2",
     "@types/node": "^20.19.2",
     "@types/numeral": "^2.0.2",
     "@types/qrcode": "^1.5.0",
-    "@types/react": "18.2.19",
-    "@types/react-dom": "18.2.7",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-responsive": "^8.0.2",
-    "@types/react-router-dom": "^5.3.2",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
-    "@types/styled-components": "^5.1.15",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "ajv": "^8.17.1",
     "apollo-boost": "^0.4.9",
-    "axios": "^1.6.5",
-    "browserify-fs": "^1.0.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.1",
-    "crypto-js": "^4.1.1",
-    "graphql": "^15.7.1",
-    "hamburger-react": "^2.4.1",
-    "moment": "^2.29.1",
-    "notistack": "^2.0.2",
-    "numeral": "^2.0.6",
     "pdf-lib": "^1.17.1",
     "prettier": "^3.3.3",
-    "process": "^0.11.10",
-    "qrcode": "^1.5.1",
-    "react": "18.2.0",
-    "react-app-env": "^1.2.3",
-    "react-device-detect": "^2.2.2",
-    "react-dom": "18.2.0",
-    "react-idle-timer": "^4.6.4",
-    "react-qrcode-logo": "^2.8.0",
-    "react-redux": "^7.2.6",
-    "react-responsive": "^8.2.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.1.0",
-    "react-spinners": "^0.14.1",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.6",
-    "recharts": "^2.1.6",
-    "redux": "^4.1.2",
-    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
-    "stream-browserify": "^3.0.0",
-    "styled-components": "^5.3.3",
-    "styled-normalize": "^8.0.7",
     "typescript": "^4.9.5",
     "vite": "^6.3.5",
     "vite-plugin-bundle-obfuscator": "^1.7.0",
     "vite-plugin-node-polyfills": "^0.23.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.95.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "start": "vite preview --port 3001",
+    "start": "vite preview",
     "deploy-testnet": "aws s3 sync ./build s3://deploy-firmastation/testnet --profile=firmachain-deploy --delete",
     "invalidate-testnet": "aws cloudfront create-invalidation --profile=firmachain-deploy --distribution-id E3490CTTE7409I --paths '/*'",
     "deploy-mainnet": "aws s3 sync ./build s3://deploy-firmastation/mainnet --profile=firmachain-deploy --delete",
