--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@apollo/client": "^3.4.16",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@firmachain/firma-js": "^0.3.1",
+    "@firmachain/firma-js": "0.3.2",
     "@firmachain/firma-js-ledger": "^0.0.8",
     "@ledgerhq/hw-transport-webhid": "^6.29.4",
     "@mui/icons-material": "^5.0.5",
@@ -50,6 +50,7 @@
     "@types/node": "^20.19.2",
     "@types/numeral": "^2.0.2",
     "@types/qrcode": "^1.5.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.34",
