--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "graphql": "^15.7.1",
     "hamburger-react": "^2.4.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "notistack": "^2.0.2",
     "numeral": "^2.0.6",
@@ -47,6 +48,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/crypto-js": "^4.0.2",
+    "@types/lodash": "^4",
     "@types/node": "^20.19.2",
     "@types/numeral": "^2.0.2",
     "@types/qrcode": "^1.5.0",
