--- a/package.json
+++ b/package.json
@@ -63,16 +63,16 @@
     "prettier": "^3.3.3",
     "redux-thunk": "^2.4.0",
     "typescript": "^4.9.5",
-    "vite": "^6.3.5",
+    "vite": "^7.0.4",
     "vite-plugin-bundle-obfuscator": "^1.7.0",
-    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "start": "vite preview",
+    "preview": "vite preview",
     "deploy-testnet": "aws s3 sync ./build s3://deploy-firmastation/testnet --profile=firmachain-deploy --delete",
     "invalidate-testnet": "aws cloudfront create-invalidation --profile=firmachain-deploy --distribution-id E3490CTTE7409I --paths '/*'",
     "deploy-mainnet": "aws s3 sync ./build s3://deploy-firmastation/mainnet --profile=firmachain-deploy --delete",
