feat: integrate Cypress for end-to-end testing

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@vitejs/plugin-react-swc": "^3.10.2",
     "ajv": "^8.17.1",
     "apollo-boost": "^0.4.9",
+    "cypress": "^14.5.2",
     "pdf-lib": "^1.17.1",
     "prettier": "^3.3.3",
     "redux-thunk": "^2.4.0",
@@ -73,6 +74,7 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "cypress:open": "cypress open",
     "deploy-testnet": "aws s3 sync ./build s3://deploy-firmastation/testnet --profile=firmachain-deploy --delete",
     "invalidate-testnet": "aws cloudfront create-invalidation --profile=firmachain-deploy --distribution-id E3490CTTE7409I --paths '/*'",
     "deploy-mainnet": "aws s3 sync ./build s3://deploy-firmastation/mainnet --profile=firmachain-deploy --delete",
